[package]
name = "try0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.25" # Verify the version number as it might have changed

tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21.0"
tungstenite = "0.21.0"
futures-util = "0.3"
crossbeam = {}
similar = "2.4.0" # Check for the latest version